Fixed- UI alignment issues

--- a/web/asset-web/resources/stylesheet/application.css
+++ b/web/asset-web/resources/stylesheet/application.css
@@ -603,3 +603,7 @@ div#agreementTable_filter input {
 div#relatedTable_filter input {
 	border: solid 1px #ddd;
 }
+
+input[type="search"] {
+	border: solid 1px #ddd;	
+}
